--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -10,6 +10,9 @@ are at the top. Dates written extra large are release dates. This contains only 
   * http://code.google.com/p/v8-juice/source/list
 
 ----
+*2009 Oct 22-24*
+  * Significant work done on the new function binding approach (see [BindingFunctions]).
+  * Introduced the `v8::juice::convert::TypeTraits<>` class to help pass around proper type information related to JS/Native conversions.
 
 *2009 Oct 21*
   * (edge branch) We have a much more flexible/generic native-to-JS function binding mechanism which can be used to bind near-arbitrary functions to arbitrary JS objects with a single line of code (with compile-time type safety). If `JSToNative()` and `NativeToJS()` are implemented for a JS-bound native, then native member functions may also be bound to their JS counterpart. This can be used in conjunction with [ClassBinder] and friends or with arbitrary JS objects.
