Edited wiki page through web user interface.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -12,7 +12,8 @@ are at the top. Dates written extra large are release dates. This contains only 
 ----
 *2009 Oct 25*
   * Added `CtorForwarder` class, which can pass on `v8::Arguments` objects to native constructors.
-  * The new class binder can now bind a JS ctor to multiple overloaded native ctors. This lays the framework for binding to overloaded (member) functions.
+  * The new class binder can now bind a JS ctor to multiple overloaded native ctors.
+  * Added bits which allow us to bind (independent of the class binder) JS functions to multiple native overloads, such that the function which gets called depends on the argument count. e.g. `foo.overloaded()` and `foo.overloaded(1,2,3)` may be bound to different native functions (or member functions).
 
 *2009 Oct 22-24*
   * Significant work done on the new function binding approach (see [BindingFunctions]).
