Edited wiki page through web user interface.

--- a/wiki/BindingFunctions.wiki
+++ b/wiki/BindingFunctions.wiki
@@ -227,11 +227,11 @@ Now let's bind them to a JS object:
 {{{
 v8::InvocationCallback IC = 
  convert:: OverloadInvocables< convert::TypeList<
-     convert::InvocableMemFunc0<BoundNative,bool,&BoundNative::overload>,
-     convert::InvocableFunction1<int,int,BoundNative_overload>,
-     convert::InvocableFunction2<double,int,double,BoundNative_overload>,
-     convert::InvocationCallbackInvocable<-1, BoundNative_overload>
-            > >::Invocable
+      convert::InvocableMemFunc0<BoundNative,bool,&BoundNative::overload>,
+      convert::InvocableFunction1<int,int,BoundNative_overload>,
+      convert::InvocableFunction2<double,int,double,BoundNative_overload>,
+      convert::InvocableCallback<-1, BoundNative_overload>
+    > >::Invocable
 myObject->Set( String::New("overloaded"), IC );
 }}}
 
