--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -12,7 +12,7 @@ are at the top. Dates written extra large are release dates. This contains only 
 ----
 *2009 Oct 25*
   * Added `CtorForwarder` class, which can pass on `v8::Arguments` objects to native constructors.
-  * The new class binder can now bind a JS ctor to multiple overloaded native ctors.
+  * The new class binder ([ClassWrap]) can now bind a JS ctor to multiple overloaded native ctors.
   * Added bits which allow us to bind (independent of the class binder) JS functions to multiple native overloads, such that the function which gets called depends on the argument count. e.g. `foo.overloaded()` and `foo.overloaded(1,2,3)` may be bound to different native functions (or member functions).
   * Fixed a post-`main()` crash in `v8-juice-shell` when using the latest versions of v8 (where they changed some locking-related assertions).
 
